API fixes, warnings in UI
* Use "Forbidden" status code in case of authenticated but not authorized access.
* Use module fallback language for verbose input/output in case of not supported user language.
* Fixed preview URL not showing port.
* Show warnings in API UI for known handling issues.

--- a/www/comps/builder/builder.css
+++ b/www/comps/builder/builder.css
@@ -725,6 +725,9 @@
 .builder-api .code-preview.low{
 	height:40px;
 }
+.builder-api .warnings{
+	color:var(--color-error);
+}
 .builder-api-columns{
 	display:flex;
 	flex-flow:column nowrap;
